fixing transaction
